cot-macros/tests/ui/derive_api_operation_response_missing_trait_impl.stderr
error[E0277]: the trait bound `Dummy: ApiOperationResponse` is not satisfied
 --> tests/ui/derive_api_operation_response_missing_trait_impl.rs:5:7
  |
5 |     A(Dummy),
  |       ^^^^^ unsatisfied trait bound
  |
help: the trait `ApiOperationResponse` is not implemented for `Dummy`
 --> tests/ui/derive_api_operation_response_missing_trait_impl.rs:8:1
  |
8 | struct Dummy;
  | ^^^^^^^^^^^^
  = help: the following other types implement trait `ApiOperationResponse`:
            Json<S>
            MyResponse
            Result<T, E>
            Result<cot::http::Response<Body>, cot::Error>
            WithExtension<T, D>
