cot-macros/tests/ui/derive_api_operation_response_missing_trait_impl.rs
use cot::openapi::ApiOperationResponse;

#[derive(ApiOperationResponse)]
enum MyResponse {
    A(Dummy),
}

struct Dummy;

fn main() {}
